# ansible-galaxy-publisher

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: servers.yml
deploy/: .dockerignore  Dockerfile  README.md  deploy-apprunner.py
docs/: deployment-plan.md  design.md
src/galaxy_publisher/: __init__.py  _version.py  auth.py  authorization.py  cache.py  collection.py  config.py  main.py  proxy.py
tests/: __init__.py  conftest.py  jwt_utils.py  mock_galaxy_server.py  sitecustomize.py  test_auth.py  test_authorization.py  test_cache.py  test_collection.py  test_config.py  test_endpoints.py  test_integration.py  test_proxy.py  test_redirects.py
tests/fixtures/test-collection/: README.md  galaxy.yml
tests/manual/: README.md  run_test_environment.py
